@@ -14,6 +14,7 @@
       <excludeFolder url="file://$MODULE_DIR$/build-web" />
       <excludeFolder url="file://$MODULE_DIR$/ide" />
       <excludeFolder url="file://$MODULE_DIR$/lib-deps" />
+      <excludeFolder url="file://$MODULE_DIR$/package" />
       <excludeFolder url="file://$MODULE_DIR$/release" />
     </content>
     <orderEntry type="inheritedJdk" />
