@@ -151,7 +151,10 @@ public abstract class AbstractChange implements Change {
             attributeMap.put(attribute.getNodeName(), attribute.getNodeValue());
         }
         for (Map.Entry entry : attributeMap.entrySet()) {
-            buffer.append(" ").append(entry.getKey()).append("=\"").append(attributeMap.get(entry.getValue())).append("\"");
+            Object value = entry.getValue();
+            if (value != null) {
+                buffer.append(" ").append(entry.getKey()).append("=\"").append(attributeMap.get(value)).append("\"");
+            }
         }
         buffer.append(">").append(StringUtils.trimToEmpty(XMLUtil.getTextContent(node)));
         NodeList childNodes = node.getChildNodes();
