@@ -35,6 +35,10 @@
                     <p>
                         Browse the LiquiBase source without having to download or check it out.
                     </p>
+                    <h2>Lead Developer</h2>
+                    <p>
+                        If you would like to contact the lead LiquiBase developer directly, you can email him at nathan [at] sundog.net. 
+                    </p>
                 </div>
             </div>
         </div>
