@@ -20,6 +20,35 @@
                 <h1>LiquiBase News</h1>
 
                 <div class="newsEntry">
+                    <h2>6/08/2007 - LiquiBase 1.0 RC1 Released</h2>
+                    <p>
+                        LiquiBase 1.0 RC1 has been released. Changes between 0.9.1 are primarily code refactoring to make sure it is a
+                        clean code base to work with post-1.0.  The only new feature is a batch and shell script for easier
+                        running of the command line migrator.  There were also the usual documentation improvements and bug fixes.
+                    </p>
+                    <p>
+                        Please <a href="../community.html">report</a> all bugs you find with the release candidate so they can be
+                        addressed in the 1.0 release, particularly in the <a href="../manual/latest/maven.html">Maven support</a>.  Unless there are show-stopper bugs found, the final 1.0 release should be out in
+                        two weeks or less.
+                    </p>
+                </div>
+
+                <div class="newsEntry">
+                    <h2>6/31/2007 - LiquiBase Blog</h2>
+                    <p>
+                        We have started an official <a href="http://blog.liquibase.org">LiquiBase blog</a>.
+                    </p>
+                    <p>
+                        Partly it will be a place to announce new features and releases of LiquiBase.  All announcements on this news list
+                        should appear on the blog as well.
+                    </p>
+                    <p>
+                        Primarily, however, it will be a place to comment on agile database development in general, best practices, and pitfalls to avoid.
+                    </p>
+
+                </div>
+
+                <div class="newsEntry">
                     <h2>5/23/2007 - LiquiBase 0.9.1 Released</h2>
                     <p>
                         LiquiBase 0.9.1 has been released. 0.9.1 is a bug-fix release that fixes bugs in the Ant migrator,
