@@ -18,7 +18,7 @@
 
             <div id="content">
                 <h2>LiquiBase Database Refactoring IDE</h2>
-                <h3>Coming Soon</h3>
+                <h3>Coming Soon, Help Wanted</h3>
                 <p>
                     LiquiBase is designed with the idea of building an visual tool on top of it to make
                     managing database changes even easier.
@@ -32,7 +32,10 @@
                 <p>
                     As we used the LiquiBase IDE, however, we found ourselves really wanting it as an IDE plugin.
                     We tore the code apart to abstract it for plug-in use, and it has not yet recovered.
-                    We are hoping to create a beta version as part of the upcoming LiquiBase 1.0 release.
+                    We were hoping to create a beta version as part of the upcoming LiquiBase 1.0 release,
+                    but chose not to hold up the release for the IDE.
+                </p>
+                <p>
                     We are would like to help create a plug-in for your favorite IDE, please contact us via the <a href="../community.html">mailing list</a>.
                 </p>
                 <h2>Prototype Screenshots (click for a full-size image):</h2>
